assets/css/baernreither.css
/* ... */
.popover-header {
  background-color: rgba(115,71,208,0.3);
}

.werke-popover.bs-popover-auto .popover-body {
  font-family:'Work Sans', sans-serif;
  font-size:0.8rem;
}

.auswahl-content pre {
  font-size:0.7rem!important;
}
.auswahl-content code {
  position:relative;
  top:-15px;
}

.xml-viol, .xml-orange {
  font-family: var(--bs-font-monospace);
}
.xml-viol {
  color:rgba(115,71,208,1);
}
.xml-orange {
  color:rgba(195,161,108,1);
}

.addSpan {
  background-color:rgba(200, 190, 200, 0.2);
  padding:0 2px;
  line-height:1rem;
}
.del {
  text-decoration: line-through;
}
.frac {
  border:1px dotted silver ; 
  font-weight:700;
}
.ul {
  text-decoration: underline;
}
.bold  {
  font-weight:700;
}
.letter-spacing {
  letter-spacing: 0.075rem;
}
/*--------------- /auswahl-content ----------------*/

/*---------------- meta-box ----------------*/
.meta-box{
  padding: 10px 10px 10px 15px;
  background-color: rgba(238,211,188,1);
  box-shadow: -1px 0px 9px 0px rgba(55,55,40,0.4) inset;
  margin: 5px 0;
}

.meta-accordion-body{
  word-wrap: break-word;
  white-space: normal;
}


/*--------------- download-button ----------------*/

.download-tab {
  width:100%;
  display:flex;
  justify-content:center;
  margin-top:0.3rem;
}

.download-button{
  background-color:#fdfaf6;  
  width:40px;
  height:40px;
  border-radius:70px;
  margin-bottom:10px; 
  padding-top: 3px;
  text-align: center;
  border:3px solid rgba(115,71,208,0.5);
  transition: all .2s ease-in;
}
.download-button:hover {
  border-color:rgba(115,71,208,1);
  box-shadow: -1px 0px 9px 0px rgba(55,55,40,0.4);
  -webkit-box-shadow: -1px 0px 9px 0px rgba(55,55,40,0.4);
  -moz-box-shadow: -1px 0px 9px 0px rgba(55,55,40,0.4);
}

.st0{
  fill:rgba(115,71,208,0.5);
  transition: all .2s ease-in;
}
.download-button:hover .st0,
.st0:hover{
  fill:rgba(115,71,208,1);
}

/*--------------- /download-button ----------------*/

/* ============================== */
/* ====== /Synoptik ENDE ======== */
/* ============================== */


/* ============================== */
/* =========== Footer =========== */
/* ============================== */

.bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

@media (min-width: 768px) {
  .bd-placeholder-img-lg {
    font-size: 3.5rem;
  }
}

.b-example-divider {
  height: 3rem;
  background-color: rgba(0, 0, 0, .1);
  border: solid rgba(0, 0, 0, .15);
  border-width: 1px 0;
  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
}

.b-example-vr {
  flex-shrink: 0;
  width: 1.5rem;
  height: 100vh;
}

.bi {
  vertical-align: -.125em;
  fill: currentColor;
}

.nav-scroller {
  position: relative;
  z-index: 2;
  height: 2.75rem;
  overflow-y: hidden;
}

.nav-scroller .nav {
  display: flex;
  flex-wrap: nowrap;
  padding-bottom: 1rem;
  margin-top: -1px;
  overflow-x: auto;
  text-align: center;
  white-space: nowrap;
  -webkit-overflow-scrolling: touch;
}

footer .nav-link {
  color:rgba(55,55,40,1);
  font-size: 0.85rem;
  -moz-transition: all .2s ease-in;
  -o-transition: all .2s ease-in;
  -webkit-transition: all .2s ease-in;
  transition: all .2s ease-in;
}
footer .nav-link:hover {
  color:rgba(115,71,208,1);
}


footer div a img {
  height:30px;
  width:auto;
  margin-top:15px;
}
@media (min-width: 768px) {
  footer div:first-of-type a img{
    height:50px;
    margin-top:0;
  }

  footer div:nth-of-type(3) a img{
    height:43px;
    margin-top:0;
  }
}

